--- a/clothingshop/templates/index.html
+++ b/clothingshop/templates/index.html
@@ -22,7 +22,7 @@
 
                 <div class="col">
                     <div class="card shadow-sm">
-                        <img src="static{{ item.image_path }}" class="card-img-top" alt="" width="100%" height="100%">
+                        <img src="/static{{ item.image_path }}" class="card-img-top" alt="" width="100%" height="100%">
                         <div class="card-body">
                             <h5 class="card-title fw-bold">{{ item.name }}</h5>
                             <p class="card-text">{{ item.description }}</p>
