--- a/clothingshop/templates/admin.html
+++ b/clothingshop/templates/admin.html
@@ -25,13 +25,13 @@
 
                 <div class="col">
                     <div class="card shadow-sm">
-                        <img src="/static{{ item.image_path }}" class="card-img-top" alt="" width="100%" height="100%">
+                        <img src="/static/img/{{ item.image_path }}" class="card-img-top" alt="" width="100%" height="100%">
                         <div class="card-body">
                             <h5 class="card-title fw-bold">{{ item.name }}</h5>
                             <p class="card-text">{{ item.description }}</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="d-inline-flex">
-                                        <form action="" method="get">
+                                        <form action="{% url 'update_clothes_info' id=item.pk_clothes %}" method="get">
                                             <button type="submit" class="btn btn-sm btn-outline-dark">Изменить</button>
                                         </form>
                                         <form action="" method="post">
