--- a/clothingshop/templates/clothes_info.html
+++ b/clothingshop/templates/clothes_info.html
@@ -12,7 +12,7 @@
             <h3 class="fw-bold pb-3 text-center">{{ clothes.name }}</h3>
             <div class="row row-cols-1 row-cols-sm-1 row-cols-lg-2">
                 <div class="col">
-                    <img src="/static{{ clothes.image_path }}" alt="" width="100%" height="100%">
+                    <img src="/static/img/{{ clothes.image_path }}" alt="" width="100%" height="100%">
                 </div>
                 <div class="col py-4 ps-lg-5">
                     <p class="py-1"><strong>Категория:</strong> {{ clothes.pk_clothes_category.name }}</p>
