added clothes creation

--- a/clothingshop/templates/admin.html
+++ b/clothingshop/templates/admin.html
@@ -13,7 +13,7 @@
                 <h2 class="fw-light">Каталог товаров</h2>
             </div>
             <div class="pb-3">
-                <a href="" class="btn btn-dark">Добавить</a>
+                <a href="{% url 'create_clothes' %}" class="btn btn-dark">Добавить</a>
             </div>
     </section>
 
