--- a/clothingshop/templates/admin.html
+++ b/clothingshop/templates/admin.html
@@ -34,7 +34,8 @@
                                         <form action="{% url 'update_clothes_info' id=item.pk_clothes %}" method="get">
                                             <button type="submit" class="btn btn-sm btn-outline-dark">Изменить</button>
                                         </form>
-                                        <form action="" method="post">
+                                        <form action="{% url 'delete_clothes' id=item.pk_clothes %}" method="post">
+                                            {% csrf_token %}
                                             <button type="submit" class="btn btn-sm btn-outline-danger ms-1">Удалить</button>
                                         </form>
                                     </div>
